--- a/index.html
+++ b/index.html
@@ -64,9 +64,21 @@
                         <li class="nav-item"><a class="nav-link" href="#service">Services</a></li>
                         <li class="nav-item"><a class="nav-link" href="#agents">Agents</a></li>
                         <li class="nav-item"><a class="nav-link" href="#form-container">Enquiry</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://wa.me/+919061827363" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/profile.php?id=61568003210483" target="_blank"><i class="fab fa-facebook"></i></a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/buysel_?igsh=ZWF5aDdldzhpMmEz" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                        <li class="nav-item">
+                            <a id="whatsapp-icon" class="nav-link" href="https://wa.me/+919061827363" target="_blank">
+                                <i class="fab fa-whatsapp"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a id="facebook-icon" class="nav-link" href="https://www.facebook.com/profile.php?id=61568003210483" target="_blank">
+                                <i class="fab fa-facebook"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a id="instagram-icon" class="nav-link" href="https://www.instagram.com/buysel_?igsh=ZWF5aDdldzhpMmEz" target="_blank">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </nav>
